After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 598887 - visual glitches at startup
visual glitches at startup
Status: RESOLVED FIXED
Product: gnome-media
Classification: Deprecated
Component: gnome-volume-control
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome media maintainers
gnome media maintainers
Depends on:
Blocks:
 
 
Reported: 2009-10-19 02:39 UTC by Matthias Clasen
Modified: 2009-10-19 12:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (855 bytes, patch)
2009-10-19 02:39 UTC, Matthias Clasen
committed Details | Review

Description Matthias Clasen 2009-10-19 02:39:53 UTC
Created attachment 145759 [details] [review]
patch

When the dialog first appears, you can see the window title change from
gnome-volume-control to "Sound Preferences". Also, the output volume slider
visibly gets its initial allocation wrong.

This is due to showing the dialog out of its constructor. The attached patch
fixes it.