Fix visual glitches on startup

When the dialog first appears, you can see the window title change from
gnome-volume-control to "Sound Preferences". Also, the output volume
slider visibly gets its initial allocation wrong.

This is due to showing the dialog out of its constructor.

https://bugzilla.gnome.org/show_bug.cgi?id=598887